# dreamberd-interpreter

./: .gitignore  DreamBerdSpec.md  README.md  entry.sh  start.sh
.github/workflows/: const-const-const.yml
const-const-const/: Cargo.toml  Dockerfile
const-const-const/src/: get_set_vars.rs  main.rs
eval/: .gitignore  build.sbt
eval/src/: Eval.scala  Syntax.scala
eval/src/main/scala/: ConstConstConst.scala  Eval.scala  Exec.scala  Import.scala  Syntax.scala
examples/: example.db
maths/src/: main.cpp  server
parser/: InputStream.pm  Main.pl  Parser.pm  Tokeniser.pm
parser/.metals/: metals.lock.db  metals.mv.db
persistence/: Persistence.scala  persistence.scala
repl/: go.mod  go.sum  repl.go
typechecker/: Dockerfile.typechecker  package-lock.json  package.json
typechecker/src/: typechecker.js
