[package]
name = "const-const-const"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
redis = { version = "0.24.0", features = ["tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
